# bmi088-rs

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: build.yaml
examples/: drdy.rs  fifo_poll.rs  stm32f401-spi.rs  stm32f411-i2c.rs  stm32f411.rs
src/: accelerometer.rs  builder.rs  gyro.rs  interface.rs  lib.rs  reg.rs  sensor.rs  types.rs
src/types/: acc.rs  gyro.rs  mod.rs
