[package]
name = "bmi088"
version = "0.1.0"
edition = "2021"

authors = ["Mike Sutherland <msutherland@fastmail.com>"]
repository = "git@github.com:rland93/bmi088-rs.git"
license = "MPL 2.0"
description = "embedded-hal Rust driver for the Bosch Sensortec BMI088 inertial measurement unit (IMU)."
readme = "README.md"
keywords = ["inertial", "accelerometer", "gyroscope", "imu", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/rland93/bmi088-rs"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]


[dependencies]
embedded-hal = "1.0.0"

# Necessary to load the example code.
[dev-dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
stm32f4xx-hal = {version = "0.20", features = ["stm32f411"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = {version = "0.3", features = ["print-defmt"]}